<resources>
    <string name="app_name">Simple Ble Joystick</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="skanning">Scan</string>
    <string name="ble_devices">BLE Devices</string>
    <string name="settings">Settings</string>
    <string name="commandSetLabel">Command Setup</string>
    <string name="lt_lt"><![CDATA[<<]]></string>
    <string name="forwardLabel">Forward</string>
    <string name="rightLabel">Right</string>
    <string name="backwardLabel">Backward</string>
    <string name="leftLabel">Left</string>
    <string name="forwRightLabel">Forward-Right</string>
    <string name="bckwRightLabel">Backward-Right</string>
    <string name="forwLeftLabel">Forward-Left</string>
    <string name="backwardLeft">Backward - Left</string>
    <string name="joystickLabel_1">Joystick 1</string>

    <string name="saveLabel">Save</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="restore">Restore</string>
    <string name="nodevices">No devices available</string>
    <string name="scan">Scan</string>
    <string name="interrupt">Interrupt</string>
    <string name="backBtnTitle">Back</string>
    <string name="help">Help</string>
    <string name="unconnected">Unconnected</string>
    <string name="uButtonsLabel">Buttons</string>
    <string name="joystickLabel2">Joystick 2</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="connErr">Connection Error</string>
    <string name="flip_joystickLabel">Flip Joysticks</string>
    <string name="discreet_commands">Discreet Commands</string>
    <string name="angle_speed">Angle-Speed</string>
    <string name="uuid_label">Edit</string>
    <string name="help_url">file:///android_asset/index.html</string>

</resources>